# pyrtlsdr

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.txt  conftest.py  demo_waterfall.py  dumbtest.py  pre_install.py  pyproject.toml  pytest.ini  renovate.json  requirements-rtd.txt  setup.cfg  setup.py  showsomethings.py  test.py  testdummyrtlsdr.py
.github/workflows/: dist-test.yml  lib-test.yml  python-package.yml
build-ext/: install-librtlsdr.sh
doc/: Makefile  requirements.txt
doc/source/: Development.rst  Overview.rst  Reference.rst  conf.py  helpers.rst  index.rst  rtlsdr.rst  rtlsdraio.rst  rtlsdrtcp.rst
doc/source/_templates/: layout.html
doc/source/ext/: mdreadme.py
rtlsdr/: __init__.py  helpers.py  librtlsdr.py  rtlsdr.py  rtlsdraio.py  rtlsdrtcp.py  testutils.py
rtlsdr/rtlsdrtcp/: __init__.py  base.py  client.py  server.py
tests/: conftest.py  dummyrtlsdr.py  no_override_client_mode.py  no_override_dll_loader.py  test_aio.py  test_basic.py  test_decorators.py  test_tcp.py  testlibrtlsdr.py  utils.py
tools/ci/: install-librtlsdr-win.py  install-librtlsdr.sh
tools/packaging/: requirements.txt
tools/travis/: install-librtlsdr.sh  install-python3.5.2.sh
