[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrtlsdr"
version = "0.3.0"
description = "A Python wrapper for librtlsdr (a driver for Realtek RTL2832U based SDRs)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "roger" },
    {name = "Matthew Reid", email = "matt@nomadic-recording.com"}
]
keywords = ["radio", "librtlsdr", "rtlsdr", "sdr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[project.urls]
Documentation = "https://pyrtlsdr.readthedocs.io/"
Source = "https://github.com/pyrtlsdr/pyrtlsdr"


[project.optional-dependencies]
lib = ["pyrtlsdrlib"]


[tool.setuptools.packages.find]
exclude = ["tests*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
