[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrtlsdr"
version = "0.3.0"
description = "A Python wrapper for librtlsdr (a driver for Realtek RTL2832U based SDRs)"
readme = "README.md"

# TODO: remove legacy table entry after dropping Python 3.8 support
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    { name = "roger" },
    {name = "Matthew Reid", email = "matt@nomadic-recording.com"}
]
keywords = ["radio", "librtlsdr", "rtlsdr", "sdr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[project.urls]
Documentation = "https://pyrtlsdr.readthedocs.io/"
Source = "https://github.com/pyrtlsdr/pyrtlsdr"


[project.optional-dependencies]
lib = ["pyrtlsdrlib"]


[tool.setuptools.packages.find]
exclude = ["tests*"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
lib = [
    "pyrtlsdrlib>=0.0.4",
    "setuptools; python_version < '3.9'",
]
test = [
    {include-group = "lib"},
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-forked>=1.6.0",
]
doc = [
    {include-group = "lib"},
    "linkify-it-py>=2.0.3",
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
    "sphinx-design>=0.5.0",
    "sphinx-rtd-theme>=3.1.0",
]
dev = [
    {include-group = "lib"},
    {include-group = "test"},
    {include-group = "doc"},
]
