[bdist_wheel]
universal=1

[metadata]
name = pyrtlsdr
version = 0.3.0
author = roger
description = A Python wrapper for librtlsdr (a driver for Realtek RTL2832U based SDRs)
project_urls =
    Documentation = https://pyrtlsdr.readthedocs.io/
    Source = https://github.com/pyrtlsdr/pyrtlsdr
long_description = file: README.md,
long_description_content_type = text/markdown
license = GPLv3
keywords = radio, librtlsdr, rtlsdr, sdr
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[options]
packages = find:

[options.packages.find]
exclude =
    tests*

[options.extras_require]
lib = pyrtlsdrlib
